# ComputerVision

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/base/: base_augmentation.yaml  base_data.yaml  base_training.yaml
configs/detectron2/: faster_rcnn_r50_fpn.yaml
configs/mmdet/: faster_rcnn_r50_fpn.yaml
configs/rwds_cz/multi_source/: tropical_arid.yaml
configs/rwds_cz/single_source/: tropical.yaml
docs/superpowers/specs/: 2026-05-05-robust-object-detection-architecture-design.md
notebooks/: 01_eda_satellite_imagery.ipynb  02_domain_analysis.ipynb
scripts/: analyze.py  create_splits.py  download_data.py  evaluate.py  preprocess_data.py  train.py
src/data/datasets/: base.py  rwds.py  xbd.py  xview.py
src/data/splits/: allocator.py
src/data/transforms/: common.py  domain_rand.py  geometric.py
src/evaluation/: analyzers.py  metrics.py
src/models/: d2_wrapper.py  framework_adapter.py  mmdet_wrapper.py
src/training/: domain_gen.py  multi_source.py  single_source.py
src/utils/: checkpoint.py  config.py  logging.py
tests/integration/: test_evaluation.py  test_training.py
tests/unit/: test_config.py  test_datasets.py  test_framework_adapter.py  test_logging.py  test_metrics.py  test_splits.py  test_transforms.py
